fix(www): text overflow

--- a/www/src/css/visualizations.css
+++ b/www/src/css/visualizations.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100vw;
   height: 100vh;
-  padding-top: 130px;
+  padding-top: 150px;
 }
 
 .data-pickers-container {
